Bug 316694 - Channels are not closed when plasmoid is removed
Summary: Channels are not closed when plasmoid is removed
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: chat-plasmoid (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR major
Target Milestone: 0.6.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-13 23:29 UTC by Daniele E. Domenichelli
Modified: 2013-03-19 02:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2013-03-13 23:29:21 UTC
When the plasmoid is removed from the panel, the channels are not closed.
The channels are still registered on dbus, and MC probably thinks that they are still handled, therefore the chat-ui cannot handle it, and messages and notifications are not displayed (they are still logged by the logger though)
When you call the destroy method on the channel (i did that using d-feet), the next message starts a new channel and therefore is displayed correctly.
Comment 1 David Edmundson 2013-03-19 02:41:51 UTC
Git commit 642b552331ed5ef63064efe671ac6a214f2bf755 by David Edmundson.
Committed on 18/03/2013 at 02:54.
Pushed by davidedmundson into branch 'master'.

Fix memory leak and close all text channels on exit
REVIEW: 109559

M  +1    -0    KTp/Declarative/conversation.cpp
M  +1    -0    KTp/Declarative/conversations-model.cpp

http://commits.kde.org/telepathy-common-internals/642b552331ed5ef63064efe671ac6a214f2bf755