Fix memory leak and close all text channels on exit

BUG: 316694
REVIEW: 109559